--- a/webapps/ROOT/WEB-INF/classes/templates/modules/rank/rank_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/rank/rank_list.html
@@ -31,7 +31,7 @@
             </div>
             <!--功能按钮区-->
             <el-row class="el-row-h50">
-                <el-col :span="3">
+                <el-col :span="4">
                     <el-button type="primary" plain style="width:100%" icon="el-icon-plus" @click="creatNewRank">新建总榜单</el-button>
                 </el-col>
             </el-row>
@@ -39,16 +39,26 @@
             <div class="cv_content_square">
                 <el-table :data="tableData" style="width: 100%; margin:10px auto;" stripe>
                     <el-table-column prop="name" label="榜单名称"></el-table-column>
-                    <el-table-column prop="name" label="发布状态" width="100"></el-table-column>
-                    <el-table-column prop="modTime" label="修改人" width="160"></el-table-column>
-                    <el-table-column prop="modTime" label="修改时间" width="160"></el-table-column>
-                    <el-table-column label="操作" width="240" fixed="right">
+                    <el-table-column prop="publishStatus" label="发布状态" width="100">
+                        <!--0未发布，1是待发布，2是已发布 3是发布失败 4是待删除 5 删除-->
                         <template slot-scope="scope">
-                            <el-button type="text" size="small" @click="onlineThisRank(scope.row)">发布</el-button>
-                            <el-button type="text" size="small" @click="offlineThisRank(scope.row)">下线</el-button>
-                            <el-button type="text" size="small" @click="editThisRank(scope.row)">编辑</el-button>
-                            <el-button type="text" size="small" @click="linkToEditPage(scope.row)">榜单管理</el-button>
-                            <el-button type="text" size="small" @click="deleteThisRank(scope.row)">删除</el-button>
+                            <el-tag v-if="scope.row.publishStatus == 0">未发布</el-tag>
+                            <el-tag v-if="scope.row.publishStatus == 1" type="warning">待发布</el-tag>
+                            <el-tag v-if="scope.row.publishStatus == 2" type="success">已发布</el-tag>
+                            <el-tag v-if="scope.row.publishStatus == 3" type="danger">发布失败 </el-tag>
+                            <el-tag v-if="scope.row.publishStatus == 4" type="warning">待删除</el-tag>
+                            <el-tag v-if="scope.row.publishStatus == 5" type="danger">已删除</el-tag>
+                        </template>
+                    </el-table-column>
+                    <el-table-column prop="updateUserId" label="修改人" width="160"></el-table-column>
+                    <el-table-column prop="updateAt" label="修改时间" width="160"></el-table-column>
+                    <el-table-column label="操作" width="200" fixed="right">
+                        <template slot-scope="scope">
+                            <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="onlineThisRank(scope.row)">发布</el-button>
+                            <el-button type="text" size="small" v-if="scope.row.publishStatus == 2" @click="offlineThisRank(scope.row)">下线</el-button>
+                            <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="editThisRank(scope.row)">编辑</el-button>
+                            <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="linkToEditPage(scope.row)">榜单管理</el-button>
+                            <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="deleteThisRank(scope.row)">删除</el-button>
                         </template>
                     </el-table-column>
                 </el-table>
@@ -69,129 +79,174 @@
         <!-------子页面----新建修改模板开始基本信息------>
         <div v-show="showChildPage == 1">
             <div class="cv_content_square">
-                <el-form :model="templateForm" :rules="templateFormRules"  ref="templateForm" status-icon class="demo-ruleForm" label-width="25%" label-position="right" >
+                <el-form :model="rankForm" :rules="rankFormRules"  ref="rankForm" status-icon class="demo-ruleForm" label-width="15%" label-position="right" >
                     <el-row class="el-row-h70">
-                        <el-col :span="12">
-                            <el-form-item label="模板名称" prop="name" style="margin:0;">
+                        <el-col :span="24">
+                            <el-form-item label="榜单名称" prop="name" style="margin:0;">
                                 <el-input
                                 clearable
                                 type="text"
-                                v-model="templateForm.name"
+                                v-model="rankForm.name"
+                                maxlength="36"
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
-                        <el-col :span="12">
-                            <el-form-item label="模板ID" prop="id" style="margin:0;">
-                                <el-input
-                                clearable
-                                type="text"
-                                v-model="templateForm.id"
-                                auto-complete="off"
-                                :disabled="true"></el-input>
-                            </el-form-item>
-                        </el-col>
                     </el-row>
-                    <el-row>
+                    <el-row class="el-row-h110">
                         <el-col :span="24">
-                            <el-form-item label="模板内容" prop="content" style="margin:0;" label-width="12.5%">
+                            <el-form-item label="榜单描述" prop="description" style="margin:0;">
                                 <el-input
                                 type="textarea"
                                 :autosize="{ minRows: 3}"
-                                placeholder="请输入模板HTML"
-                                v-model="templateForm.content"
+                                maxlength="200"
+                                v-model="rankForm.description"
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
                     </el-row>
-                    <!--功能按钮区-->
-                    <el-row class="el-row-h50"  v-if="creatOrEdit == 'edit'" style="margin-top:30px;">
-                        <el-col :span="3">
-                            <el-button type="primary" plain style="width:100%" icon="el-icon-plus" @click="addIncToTemplate">添加INC</el-button>
+                    <el-row class="el-row-h70">
+                        <el-col :span="24">
+                            <el-form-item label="相关会议链接" prop="meetUrl" style="margin:0;">
+                                <el-input
+                                clearable
+                                type="text"
+                                v-model="rankForm.meetUrl"
+                                auto-complete="off"></el-input>
+                            </el-form-item>
                         </el-col>
                     </el-row>
-                    <!--表格查询结果区-->
-                    <div v-if="creatOrEdit == 'edit'" class="cv_content_square">
-                        <el-table :data="incTableData" style="width: 100%; margin:10px auto;" stripe>
-                            <el-table-column prop="name" label="INC名称"></el-table-column>
-                            <el-table-column prop="type" label="分类" width="90"></el-table-column>
-                            <el-table-column prop="crtTime" label="创建时间" width="160"></el-table-column>
-                            <el-table-column prop="modTime" label="修改时间" width="160"></el-table-column>
-                            <el-table-column label="操作" width="100" fixed="right">
-                                <template slot-scope="scope">          
-                                    <el-button type="text" size="small" @click="removeThisInc(scope.row)">移除</el-button>
-                                </template>
-                            </el-table-column>
-                        </el-table>
-                    </div>
+                    <el-row class="el-row-h70">
+                        <el-col :span="12">
+                            <el-form-item label-width="30%" label="发布时间" prop="publishAt" style="margin:0;">
+                                <el-date-picker
+                                    style="width: 100%;"
+                                    v-model="rankForm.publishAt"
+                                    value-format="timestamp"
+                                    type="datetime"
+                                    placeholder="请选择发布时间">
+                                </el-date-picker>
+                            </el-form-item>
+                        </el-col>
+                    </el-row>
+                    <el-row class="el-row-h220">
+                        <el-col :span="12">
+                            <el-form-item label="榜单封面" prop="coverImg" label-width="30%" style="margin:0;">
+                                <div class="fengmian_show" @click="openAddCoverImg">
+                                    <img v-if="rankForm.coverImg" :src="rankForm.coverImg" class="avatar">
+                                    <i v-else class="el-icon-plus avatar-uploader-icon"></i>
+                                </div>
+                            </el-form-item>
+                        </el-col>
+                        <el-col :span="12" style="line-height: 30px;">请从封面图库选择<br>建议格式：Png JPG JPEG</el-col>
+                    </el-row>
                     <el-row class="el-row-h60" style="margin-top:30px;">
                         <el-col :span="4" :offset="7">
-                            <el-button type="primary" style="width:100%" @click="creatOrEditTemplate('templateForm')">保存</el-button>
+                            <el-button type="primary" style="width:100%" @click="creatOrEditSave('rankForm')">保存</el-button>
                         </el-col>
                         <el-col :span="4" :offset="2">
-                            <el-button type="primary" style="width:100%" @click="closeToMainpage('templateForm')">取消</el-button>
+                            <el-button type="primary" style="width:100%" @click="closeToMainpage('rankForm')">取消</el-button>
                         </el-col>
                     </el-row>
                 </el-form>
             </div>
             
-        </div>
-        <!-------子页面----新建修改模板结束------>
-
-        <!-------子页面----选择INC开始------>
-        <div v-show="showChildPage == 2">
-            <!--列表搜索区-->
-            <div class="cv_content_square">
-                <el-form :model="incsearchForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right">
+            <!--封面图库弹出层开始-->
+            <el-dialog title="封面图库" :visible.sync="showCoverimgLib" width="100%" :fullscreen="true" :show-close="false" >
+                <el-form :model="searchCoverimgForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                     <el-row class="el-row-h60">
-                        <el-col :span="12">
-                            <el-form-item label="INC名称" style="margin:0;">
+                        <el-col :span="16">
+                            <el-form-item label="图片名称" style="margin:0;">
                                 <el-input
                                 clearable
                                 type="text"
-                                v-model="incsearchForm.name"
+                                v-model="searchCoverimgForm.picTitle"
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
                         <el-col :span="3" :offset="1" class="el-row-h40">
-                            <el-button type="primary" style="width:100%" @click="startSearchInc(0)">搜索</el-button>
+                            <el-button type="primary" icon="el-icon-search" style="width:100%" @click="searchCoverImg(0)">搜索</el-button>
                         </el-col>
                         <el-col :span="3" :offset="1" class="el-row-h40">
-                            <el-button type="primary" style="width:100%" icon="el-icon-plus" @click="addIncToRelative()">添加到模板</el-button>
+                            <el-button type="primary" style="width:100%" @click="backToEdit()">返回</el-button>
                         </el-col>
-                        <el-col :span="3" :offset="1" class="el-row-h40">
-                            <el-button type="primary" style="width:100%" @click="backToPage2()">返回</el-button>
-                        </el-col>
-                    </el-row>    
+                    </el-row>
                 </el-form>
-            </div>
-            <!--表格查询结果区-->
-            <div class="cv_content_square">
-                <el-table :data="incSearchTableData" ref="incSearchTableData" @selection-change="handleSelectionChange" style="width: 100%; margin:10px auto;" stripe>
-                    <el-table-column prop="name" label="标题"></el-table-column>
-                    <el-table-column prop="type" label="分类" width="90"></el-table-column>
-                    <el-table-column prop="crtTime" label="创建时间" width="160"></el-table-column>
-                    <el-table-column prop="modTime" label="修改时间" width="160"></el-table-column>
-                    <el-table-column type="selection" width="55" fixed="right"></el-table-column>
+                <el-table :data="coverimgTableData" max-height="450" style="width: 100%; margin:10px auto;" ref="coverimgTableData" stripe>
+                    <el-table-column prop="picUrl" label="封面图预览" width="180">
+                        <template v-if="scope.row.picUrl" slot-scope="scope">
+                            <img style="width:80px;height:60px;" :src="scope.row.picUrl">
+                        </template>
+                    </el-table-column>
+                    <el-table-column prop="picTitle" label="图片名称" width="250"></el-table-column>
+                    <el-table-column prop="picEditorName" label="修改人" width="120"></el-table-column>
+                    <el-table-column prop="picModTime" label="最后更新时间"></el-table-column>
+                    <el-table-column label="操作" width="100" fixed="right">
+                        <template slot-scope="scope">
+                            <el-button type="text" size="small" @click="addThisCoverImg(scope.row)">添加</el-button>
+                        </template>
+                    </el-table-column>
                 </el-table>
-            </div>
-            <!--分页器-->
-            <div class="cv_page_zone">
-                <el-pagination
-                    @current-change="handleCurrentChange"
-                    :current-page="pagination2.currentPage"
-                    :page-size="pagination2.pageSize"
-                    layout="total, prev, pager, next, jumper"
-                    :total="pagination2.totalCount">
-                </el-pagination>
-            </div>
-        </div>
-        <!-------子页面----选择INC结束------>
+                <!--分页器-->
+                <div class="cv_page_zone">
+                    <el-pagination
+                        @current-change="handleCurrentChange2"
+                        :current-page="pagination2.currPage"
+                        :page-size="pagination2.pageSize"
+                        layout="total, prev, pager, next, jumper"
+                        :total="pagination2.totalCount">
+                    </el-pagination>
+                </div>
+            </el-dialog>
+            <!--封面图库弹出层结束-->
 
+
+        </div>
+        <!-------子页面----新建修改结束------>
 
         
     </div>
 </body>
-
+<style>
+.fengmian_show{
+    width: 240px;
+    height: 180px;
+    border-radius: 5px;
+    border: 1px dashed #d9d9d9;
+    text-align: center;
+    cursor: pointer;
+}
+.avatar-uploader .el-upload {
+    width:240px;
+    border: 1px dashed #d9d9d9;
+    border-radius: 6px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+}
+.avatar-uploader .el-upload:hover {
+    border-color: #175CE9;
+}
+.avatar-uploader-icon {
+    display: inline-block;
+    font-size: 28px;
+    color: #8c939d;
+    width: 110px;
+    height: 110px;
+    line-height: 180px;
+    text-align: center;
+}
+.fengmian_show:hover{
+    border-color: #175CE9;
+}
+.fengmian_show:hover .avatar-uploader-icon{
+    color: #175CE9;
+}
+.avatar {
+    width: 240px;
+    height: 180px;
+    display: block;
+}
+</style>
 <script type="text/javascript" src="${request.contextPath}/statics/js/element.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/modules/rank/rank_list.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
