--- a/webapps/ROOT/WEB-INF/classes/templates/modules/rank/rank_institution.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/rank/rank_institution.html
@@ -20,7 +20,7 @@
                                 <el-input
                                 clearable
                                 type="text"
-                                v-model="searchForm.cooperationName"
+                                v-model="searchForm.name"
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
