--- a/webapps/ROOT/WEB-INF/classes/templates/modules/rank/rank_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/rank/rank_list.html
@@ -50,7 +50,7 @@
                             <el-tag v-if="scope.row.publishStatus == 5" type="danger">已删除</el-tag>
                         </template>
                     </el-table-column>
-                    <el-table-column prop="updateUserId" label="修改人" width="160"></el-table-column>
+                    <el-table-column prop="userName" label="修改人" width="160"></el-table-column>
                     <el-table-column prop="updateAt" label="修改时间" width="160"></el-table-column>
                     <el-table-column label="操作" width="200" fixed="right">
                         <template slot-scope="scope">
