--- a/webapps/ROOT/WEB-INF/classes/templates/modules/rank/edit_rank.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/rank/edit_rank.html
@@ -3,14 +3,14 @@
 <head>
 <link rel="stylesheet" href="${request.contextPath}/statics/css/element.css">
 
-<title>新建/编辑榜单</title>
+<title>编辑榜单</title>
 </head>
 <body>
     <#include "/header.html">
-    <div class="cvpage_title_common">新建/编辑榜单</div>
+    <div class="cvpage_title_common">编辑榜单</div>
     <div id="edit_rank" class="cv_page_content">
 
-        <!--树形结构主页面 0 -->
+        <!--树形结构主页面开始 0 -->
         <div v-show="showChildPage == 0">
 
             <!--树形结构区-->
@@ -33,13 +33,18 @@
                         :expand-on-click-node="false"
                         :indent="30">
                         <span class="custom-tree-node" slot-scope="{ node, data }">
-                            <span style="font-size: 15px; color: rgb(8, 61, 167);font-weight: 700;">{{ data.name }}</span>
+                            <span v-if="data.level == 1 && data.type == 0" style="font-size: 15px; color: rgb(0, 0, 0);font-weight: 700;">{{ data.name }}</span>
+                            <span v-if="data.level == 2 && data.type == 0" style="font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;">{{ data.name }}</span>
+                            <span v-if="data.level == 3 && data.type == 0" style="font-size: 15px; color: rgb(4, 118, 248);font-weight: 700;">{{ data.name }}</span>
+                            <span v-if="data.level == 4 && data.type == 0" style="font-size: 15px; color: rgb(211, 65, 7);">{{ data.name }}</span>
+                            <span v-if="data.type !== 0" style="font-size: 15px; color: rgb(211, 65, 7);">{{ data.name }}</span>
+                            <span v-if="data.level !== 1">{{ data.name }}</span>
                             <span>权重:{{ data.weight }}</span>
                             <span>级别:{{ data.level }}</span>
                             <span>最后:{{ data.end }}</span>
                             <div>
                                 <el-button v-if="data.end !== 1" type="text" size="mini" @click="appendLevelOrRank(node, data)">添加</el-button>
-                                <el-button v-if="data.end == 1" type="text" size="mini" @click="appendRankData(node, data)">添加数据</el-button>
+                                <el-button v-if="data.end == 1" type="text" size="mini" @click="editRankData(node, data)">编辑榜单</el-button>
                                 <el-button type="text" size="mini" @click="changeLevelOrRank(node, data)">修改</el-button>
                                 <el-button type="text" size="mini" @click="remove(node, data)">删除</el-button>
                             </div>
@@ -138,16 +143,16 @@
             <!--榜单新建修改弹出层开始-->
 
         </div>
-
+        <!--树形结构主页面结束 0 -->
         
-        <!--机构榜单编辑子页面 1 -->
+        <!--机构榜单编辑子页面开始  1 -->
         <div v-show="showChildPage == 1">
             <div class="cv_content_square">
                 <!--机构榜单搜索区-->
                 <div class="cv_content_square">
                     <el-form :model="searchInstituteForm" status-icon class="demo-ruleForm" label-width="15%" label-position="right" @submit.native.prevent>
                         <el-row class="el-row-h60">
-                            <el-col :span="17">
+                            <el-col :span="16">
                                 <el-form-item label="机构名称" style="margin:0;">
                                     <el-input
                                     clearable
@@ -159,46 +164,108 @@
                             <el-col :span="3" :offset="1" class="el-row-h40">
                                 <el-button type="primary" style="width:100%" @click="searchCurrentInstitute()">搜索</el-button>
                             </el-col>
+                            <el-col :span="3" :offset="1" class="el-row-h40">
+                                <el-button style="width:100%" @click="backToRankListFromInstitute">返回</el-button>
+                            </el-col>
                         </el-row>    
                     </el-form>
                 </div>
                 <!--功能按钮区-->
                 <el-row class="el-row-h50">
                     <el-col :span="4">
-                        <el-button type="primary" plain style="width:100%" icon="el-icon-plus" @click="">添加机构</el-button>
+                        <el-button type="primary" plain style="width:100%" icon="el-icon-plus" @click="addInstituteToRank">添加机构</el-button>
                     </el-col>
                 </el-row>
-                <!--表格查询结果区-->
+                <!--表格查询结果区--不分页-->
                 <div class="cv_content_square">
                     <el-table :data="currentInstituteTableData" style="width: 100%; margin:10px auto;" stripe>
-                        <el-table-column prop="name" label="榜单名称"></el-table-column>
-                        <el-table-column prop="publishStatus" label="发布状态" width="100">
-                            <!--0未发布，1是待发布，2是已发布 3是发布失败 4是待删除 5 删除-->
-                            <template slot-scope="scope">
-                                <el-tag v-if="scope.row.publishStatus == 0">未发布</el-tag>
-                                <el-tag v-if="scope.row.publishStatus == 1" type="warning">待发布</el-tag>
-                                <el-tag v-if="scope.row.publishStatus == 2" type="success">已发布</el-tag>
-                                <el-tag v-if="scope.row.publishStatus == 3" type="danger">发布失败 </el-tag>
-                                <el-tag v-if="scope.row.publishStatus == 4" type="warning">待删除</el-tag>
-                                <el-tag v-if="scope.row.publishStatus == 5" type="danger">已删除</el-tag>
+                        <el-table-column prop="logoUrl" label="机构Logo" width="140">
+                            <template v-if="scope.row.logoUrl" slot-scope="scope">
+                                <div class="imgcontainer">
+                                    <img :src="scope.row.logoUrl">
+                                </div>
                             </template>
                         </el-table-column>
-                        <el-table-column prop="userName" label="修改人" width="160"></el-table-column>
-                        <el-table-column prop="updateAt" label="修改时间" width="160"></el-table-column>
-                        <el-table-column label="操作" width="200" fixed="right">
+                        <el-table-column prop="name" label="机构名称" width=""></el-table-column>
+                        <el-table-column prop="weight" label="排序" width="150">
                             <template slot-scope="scope">
-                                <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="onlineThisRank(scope.row)">发布</el-button>
-                                <el-button type="text" size="small" v-if="scope.row.publishStatus == 2" @click="offlineThisRank(scope.row)">下线</el-button>
-                                <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="editThisRank(scope.row)">编辑</el-button>
-                                <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="linkToEditPage(scope.row)">榜单管理</el-button>
-                                <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="deleteThisRank(scope.row)">删除</el-button>
+                                <el-input type="text" style="width: 100px;" v-model="scope.row.weight" auto-complete="off" @change="instituteRankWeightChange(scope.row)"></el-input>
+                            </template>
+                        </el-table-column>
+                        <el-table-column label="操作" width="100" fixed="right">
+                            <template slot-scope="scope">
+                                <el-button type="text" size="small" @click="delThisInstituteFromRank(scope.row)">删除</el-button>
                             </template>
                         </el-table-column>
                     </el-table>
                 </div>
 
+                <!--机构库弹出层开始   所属页面级 1-->
+                <el-dialog title="榜单机构库" :visible.sync="showInstituteLib" width="80%" :close-on-click-modal="false" :close-on-press-escape="false" :fullscreen="true" :show-close="false" >
+                    <!--搜索区-->
+                    <div class="cv_content_square">
+                        <el-form :model="searchInstituteLibForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
+                            <el-row class="el-row-h60">
+                                <el-col :span="16">
+                                    <el-form-item label="机构名称" style="margin:0;">
+                                        <el-input
+                                        clearable
+                                        type="text"
+                                        v-model="searchInstituteLibForm.name"
+                                        auto-complete="off"></el-input>
+                                    </el-form-item>
+                                </el-col>
+                                <el-col :span="3" :offset="1" class="el-row-h40">
+                                    <el-button type="primary" icon="el-icon-search" style="width:100%" @click="startSearchInstituteLib(0)">搜索</el-button>
+                                </el-col>
+                                <el-col :span="3" :offset="1" class="el-row-h40">
+                                    <el-button style="width:100%" @click="backToInstituteRank()">返回</el-button>
+                                </el-col>
+                            </el-row>
+                        </el-form>
+                    </div>
+                    <!--机构库列表-->
+                    <div class="cv_content_square">
+                        <el-table :data="instituteLibData" style="width: 100%; margin:10px auto;" ref="multipleTable" stripe>
+                            <el-table-column prop="logoUrl" label="机构Logo" width="150">
+                                <template v-if="scope.row.logoUrl" slot-scope="scope">
+                                    <div class="imgcontainer">
+                                        <img :src="scope.row.logoUrl">
+                                    </div>
+                                </template>
+                            </el-table-column>
+                            <el-table-column prop="name" label="机构名称" width=""></el-table-column>
+                            <el-table-column prop="userName" label="更新人" width="90"></el-table-column>
+                            <el-table-column label="操作" width="100" fixed="right">
+                                <template slot-scope="scope">
+                                    <el-button type="text" size="small" @click="addThisInstituteToRank(scope.row)">添加</el-button>
+                                </template>
+                            </el-table-column>
+                        </el-table>
+                    </div>
+                    <!--分页器-->
+                    <div class="cv_page_zone">
+                        <el-pagination
+                            @current-change="handleCurrentChange"
+                            :current-page="pagination1.currPage"
+                            :page-size="pagination1.pageSize"
+                            layout="total, prev, pager, next, jumper"
+                            :total="pagination1.totalCount">
+                        </el-pagination>
+                    </div>
+                </el-dialog>
+                <!--机构库弹出层结束   所属页面级 1-->
+
             </div>
         </div>
+        <!--机构榜单编辑子页面结束  1 -->
+
+
+
+
+
+
+
 
 
     </div>
@@ -208,6 +275,19 @@
 <script type="text/javascript" src="${request.contextPath}/statics/js/modules/rank/edit_rank.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
 <style>
+.imgcontainer{
+    width:50px;
+    height:50px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+	border:1px solid #bebebe;
+}
+.imgcontainer img{
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+}
 .custom-tree-node {
     flex: 1;
     display: flex;
